<resources>
    <string name="app_name">Mandioca da Fazenda</string>
    <string name="welcome_text">Olá, bem-vindo ao Mandioca da Fazenda</string>
    <string name="user">Usuário</string>
    <string name="password">Senha</string>
    <string name="login">Acessar</string>
    <string name="logout">Sair</string>
    <string name="register_production">Registrar Produção</string>
    <string name="consult_production">Consultar Produção</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date">Data</string>
    <string name="date_string">dd/mm/aaaa</string>
    <string name="product">Produto</string>
    <string name="qtd">Quantidade</string>
    <string name="consult_production_request">Consultar pedido de produção</string>
    <string name="consult">Consultar</string>
    <string name="logout_question">Deseja sair?</string>
    <string name="question_logout">Tem certeza que deseja sair da sua conta?</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="register">Registrar</string>
    <string name="consultar_fornecimento">Consultar</string>
    <string name="schedule">Agendamento</string>
    <string name="consultar_fornecimento_phrase">Consultar fornecimento</string>
</resources>
