<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
>
    <TextView
            android:id="@+id/tv_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout_question"
            android:textAlignment="center"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/qanelas"
            android:background="@color/colorPrimaryDark"
            android:textSize="22sp"
    />
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="40dp"
            android:paddingBottom="40dp"
            android:text="@string/question_logout"
            android:textAlignment="center"
            android:fontFamily="@font/qanelas"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
    />
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
    >
        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_cancelLogout"
                android:layout_width="0dp"
                android:layout_height="46dp"
                android:background="@drawable/button_cancel"
                android:fontFamily="@font/qanelas"
                android:text="@string/no"
                android:textSize="18sp"
                android:textColor="@color/colorPrimary"
                style="?android:attr/borderlessButtonStyle"
                android:layout_weight="1"
        />
        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_confirmLogout"
                android:layout_width="0dp"
                android:layout_height="46dp"
                android:background="@drawable/button_click"
                android:fontFamily="@font/qanelas"
                android:text="@string/yes"
                android:textSize="18sp"
                android:textColor="@color/colorPrimaryDark"
                style="?android:attr/borderlessButtonStyle"
                android:layout_weight="1"
        />
    </LinearLayout>
</LinearLayout>