<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        tools:context=".view.activities.LoginActivity">

    <View
            android:id="@+id/view_blue"
            android:layout_width="0dp"
            android:layout_height="145dp"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
    />

    <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_login"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="63dp"
    />
    
    <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:text="@string/welcome_text"
            android:fontFamily="@font/qanelas"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/iv_logo"
            android:textSize="22sp"
            android:layout_marginTop="30dp"
    />
    
    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_welcome"
            android:layout_marginTop="40dp"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/TextAppearanceStyle"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
    >
        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user"
                android:inputType="textEmailAddress"
                android:id="@+id/et_email"
                android:imeOptions="actionNext"
                android:fontFamily="@font/qanelas"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_email"
            android:layout_marginTop="10dp"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/TextAppearanceStyle"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
    >
        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:id="@+id/et_password"
                android:imeOptions="actionDone"
                android:fontFamily="@font/qanelas"
        />
    </com.google.android.material.textfield.TextInputLayout>
    
    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_login"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:background="@drawable/button_click"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_password"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/qanelas"
            android:text="@string/login"
            android:textSize="18sp"
            android:textColor="@color/colorPrimaryDark"
            android:elevation="0dp"
            style="?android:attr/borderlessButtonStyle"
    />

</androidx.constraintlayout.widget.ConstraintLayout>