<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.fragments.RegisterProductionFragment"
        android:background="@android:color/white"
>
    <androidx.core.widget.NestedScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:fillViewport="true"
    >
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
        >
            <TextView
                    android:id="@+id/tv_title_production"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_production"
                    android:fontFamily="@font/qanelas"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="21sp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="15dp"
            />

            <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:fontFamily="@font/qanelas"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="15dp"
            />
            <LinearLayout
                    android:id="@+id/ll_chooseDate"
                    android:layout_width="match_parent"
                    android:layout_height="46dp"
                    android:orientation="horizontal"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/border_input"
                    android:paddingStart="15dp"
                    android:paddingEnd="5dp"
            >
                <TextView
                        android:id="@+id/tv_date_production"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="7"
                        android:layout_gravity="center"
                        android:text="@string/date_string"
                        android:fontFamily="@font/qanelas"
                />
                <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_weight="1"
                        android:src="@drawable/ic_calendar"
                        android:layout_gravity="center"
                />
            </LinearLayout>

            <TextView
                    android:id="@+id/tv_product"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product"
                    android:fontFamily="@font/qanelas"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="15dp"
            />

            <LinearLayout
                    android:id="@+id/ll_spinnerProduct"
                    android:layout_width="match_parent"
                    android:layout_height="46dp"
                    android:orientation="horizontal"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/border_input"
            >
                <Spinner
                        android:id="@+id/sp_product"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                />
            </LinearLayout>

            <TextView
                    android:id="@+id/tv_qtd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/qtd"
                    android:fontFamily="@font/qanelas"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="15dp"
            />

            <LinearLayout
                    android:id="@+id/ll_editQtd"
                    android:layout_width="match_parent"
                    android:layout_height="46dp"
                    android:orientation="horizontal"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/border_input"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
            >
                <EditText
                        android:id="@+id/et_qtd"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:inputType="number"
                        android:imeOptions="actionDone"
                />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/bt_registerProduction"
                    android:layout_width="match_parent"
                    android:layout_height="46dp"
                    android:background="@drawable/button_click"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/til_password"
                    android:layout_marginTop="60dp"
                    android:fontFamily="@font/qanelas"
                    android:text="@string/register_production"
                    android:textSize="18sp"
                    android:textColor="@color/colorPrimaryDark"
                    style="?android:attr/borderlessButtonStyle"
            />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>