<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/srl_produtc"
        android:layout_width="match_parent" android:layout_height="match_parent"
        tools:context=".view.fragments.ConsultProductFragment"
        android:background="@android:color/white"
>
        <androidx.core.widget.NestedScrollView
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:fillViewport="true"
        >
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
            >
                <TextView
                        android:id="@+id/tv_title_production"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/consult_production_request"
                        android:fontFamily="@font/qanelas"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="21sp"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="15dp"
                />

                <TextView
                        android:id="@+id/tv_date_consult"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date"
                        android:fontFamily="@font/qanelas"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="16sp"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="15dp"
                />
                <LinearLayout
                        android:id="@+id/ll_chooseDateConsult"
                        android:layout_width="match_parent"
                        android:layout_height="46dp"
                        android:orientation="horizontal"
                        android:layout_marginStart="30dp"
                        android:layout_marginEnd="30dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/border_input"
                        android:paddingStart="15dp"
                        android:paddingEnd="5dp"
                >
                    <TextView
                            android:id="@+id/tv_date_production_consult"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="7"
                            android:layout_gravity="center"
                            android:text="@string/date_string"
                            android:fontFamily="@font/qanelas"
                    />
                    <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_weight="1"
                            android:src="@drawable/ic_calendar"
                            android:layout_gravity="center"
                    />
                </LinearLayout>

                <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/bt_consultProducts"
                        android:layout_width="match_parent"
                        android:layout_height="46dp"
                        android:background="@drawable/button_click"
                        android:layout_marginStart="30dp"
                        android:layout_marginEnd="30dp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/til_password"
                        android:layout_marginTop="30dp"
                        android:fontFamily="@font/qanelas"
                        android:text="@string/consult"
                        android:textSize="18sp"
                        android:textColor="@color/colorPrimaryDark"
                        style="?android:attr/borderlessButtonStyle"
                />

                <TextView
                        android:id="@+id/tv_search_result"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/qanelas"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="16sp"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="15dp"
                />

                <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_request_product"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:nestedScrollingEnabled="false"
                        android:paddingStart="30dp"
                        android:paddingEnd="30dp"
                />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>